src/styles/docs.css
:root {
  --docs-nav-height: 49px;
  --docs-nav-margin-bottom: 32px;
  --docs-left-sidebar-logo-height: var(--docs-nav-height);
  --docs-sub-nav-height: 52px;
  --docs-left-sidebar-logo-margin-bottom: var(--docs-nav-margin-bottom);
  --docs-left-sidebar-max-width: 240px;
  --docs-right-sidebar-max-width: var(--docs-left-sidebar-max-width);
  --docs-content-max-width: 1140px;
}

/*
  DocSearch styles
*/

.DocSearch-Button {
  border-radius: 2px !important;
  background-color: #f6f6f6 !important;
  column-gap: 20px !important;
  margin: 0px !important;
  padding: 0px 12px !important;
}

.dark .DocSearch-Button {
  border-radius: 2px !important;
  background-color: #2b2b2b !important;
  column-gap: 20px !important;
  margin: 0px !important;
  padding: 0px 12px !important;
}

.dark .DocSearch-Button:hover {
  color: #c0c0c0 !important;
}

@media screen and (min-width: 768px) {
  .DocSearch-Button {
    padding: 0px 16px !important;
  }
}

span.DocSearch-Button-Keys {
  min-width: 32px !important;
  border-width: 1px !important;
  border-color: #a5a5a5 !important;
  border-radius: 4px !important;
}

span.DocSearch-Button-Placeholder {
  font-size: 16px !important;
  font-weight: 400;
}

.DocSearch-Search-Icon {
  width: 14px !important;
}

.dark .DocSearch-Search-Icon {
  color: #a5a5a5 !important;
}

.DocSearch-Button-Container {
  margin: 0 auto 0 0 !important;
}

.DocSearch-Button-Key {
  border-radius: 0px !important;
  box-shadow: none !important;
  background-color: #e4e4e4 !important;
  background: none !important;
  padding: 3px 0 0 0 !important;
  margin: auto 0 !important;
  width: 16px !important;
  font-size: 14px !important;
}

.DocSearch-Hit[aria-selected="true"] a {
  background-color: #02d085 !important;
}

.dark .DocSearch-Hit a {
  background-color: #1a1a1a !important;
  box-shadow: none;
}

.dark .DocSearch-Hit[aria-selected="true"] a {
  background-color: #02d085 !important;
}

.dark .DocSearch-Hit-title {
  color: #c0c0c0 !important;
}

.dark .DocSearch-Modal {
  background-color: #2b2b2b !important;
  box-shadow: none;
}

.dark .DocSearch-Footer {
  background-color: #2b2b2b !important;
}

.dark .DocSearch-Form {
  background-color: #2b2b2b !important;
}

.dark .DocSearch-Input {
  color: #c0c0c0 !important;
}

.dark .DocSearch-Hit-source {
  background-color: #2b2b2b !important;
}

/*
  DocSearch modal search box
*/

.DocSearch-Form {
  border-color: #a5a5a5 !important;
  border-width: 1px;
  box-shadow: none !important;
}

div.DocSearch-Hit-source {
  color: #a5a5a5 !important;
}

.DocSearch-Cancel {
  color: #2b2b2b !important;
}

/*
  DocSearch modal key instruction
*/

.DocSearch-Commands-Key {
  border-radius: 0px !important;
  box-shadow: none !important;
  background-color: #e4e4e4 !important;
  background: none !important;
  padding: 1px 0 0 0 !important;
}

/*
  Because we have sticky header, every time we jump to the anchor link, the header will
  cover the h1~h4 title, we need scroll-margin-top to cope with this issue.
*/

article > h1,
h2,
h3,
h4 {
  scroll-margin-top: 140px;
}

/*
  The style of summary block
*/

article > .instill-scoped-toggle-block > details {
  padding: 20px 25px;
  background-color: #fafafa;
  margin-top: 20px;
  margin-bottom: 20px;
  border-radius: 5px;
  border-left: 5px solid #5c5c5c;
}

.dark article > .instill-scoped-toggle-block > details {
  padding: 20px 25px;
  background-color: #2b2b2b;
  margin-top: 20px;
  margin-bottom: 20px;
  border-radius: 5px;
  border: 5px solid #5c5c5c;
  border-top: 1px solid #5c5c5c;
  border-right: 1px solid #5c5c5c;
  border-bottom: 1px solid #5c5c5c;
}

article > .instill-scoped-toggle-block > details > summary {
  cursor: pointer;
}

article > .instill-scoped-toggle-block > details > summary > strong {
  padding-left: 10px;
}

/*
  The style of header-anchor in header
*/

span.heading-anchor-hash {
  transition: color 0.25s, opacity 0.25s;
  margin-left: -2rem;
  margin-right: 0rem;
  opacity: 0;
  color: #8c8a8a;
  float: left;
}

article > h2:hover span.heading-anchor-hash,
h3:hover span.heading-anchor-hash,
h4:hover span.heading-anchor-hash {
  opacity: 100;
}

.embed-youtube {
  width: 100%;
  height: 300px;
  margin-top: 20px;
  margin-bottom: 20px;
}

@media screen and (min-width: 768px) {
  .embed-youtube {
    width: 100%;
    height: 450px;
    margin-top: 60px;
    margin-bottom: 60px;
  }
}

.docs-info-block {
  width: 100%;
  padding-top: 20px;
  padding-bottom: 10px;
  padding-right: 20px;
  padding-left: 20px;
  display: flex;
  flex-direction: column;
  border-left: 5px solid;
  border-top: 1px solid;
  border-right: 1px solid;
  border-bottom: 1px solid;
  margin-top: 20px;
  margin-bottom: 20px;
  border-radius: 5px;
}

.docs-info-block p {
  margin: 10px 0;
}

/* 
  InfoBlock - warning
*/

.docs-info-block.warning {
  background-color: #fffce3;
  border-color: #dec800;
  color: #735301;
}

.dark .docs-info-block.warning {
  background-color: #2b2b2b;
  border-color: #dec800;
  color: #dec800;
}

.docs-info-block.warning a {
  color: #735301;
}

.dark .docs-info-block.warning a {
  color: #dec800;
}

.docs-info-block.warning blockquote {
  border-left-color: #dec800;
  color: #735301;
}

.dark .docs-info-block.warning blockquote {
  border-left-color: #dec800;
  color: #dec800;
}

.docs-info-block.warning strong {
  color: #735301;
}

.dark .docs-info-block.warning strong {
  color: #dec800;
}

.docs-info-block.warning code {
  color: #735301;
}

.dark .docs-info-block.warning code {
  color: #dec800;
  border-color: #dec800;
  background-color: #2b2b2b;
}

/* 
  InfoBlock - tip
*/

.docs-info-block.tip {
  background-color: #f8f8ff;
  border-color: #0000ff;
  color: #000090;
}

.dark .docs-info-block.tip {
  background-color: #2b2b2b;
  border-color: #ededff;
  color: #ededff;
}

.docs-info-block.tip a {
  color: #000090;
}

.dark .docs-info-block.tip a {
  color: #ededff;
}

.docs-info-block.tip blockquote {
  border-left-color: #0000ff;
  color: #000090;
}

.dark .docs-info-block.tip blockquote {
  border-left-color: #ededff;
  color: #ededff;
}

.docs-info-block.tip strong {
  color: #000090;
}

.dark .docs-info-block.tip strong {
  color: #ededff;
}

.docs-info-block.tip code {
  color: #000090;
}

.dark .docs-info-block.tip code {
  color: #ededff;
  border-color: #ededff;
  background-color: #2b2b2b;
}

/* 
  InfoBlock - danger
*/

.docs-info-block.danger {
  background-color: #fff1f1;
  border-color: #ff5353;
  color: #a40000;
}

.dark .docs-info-block.danger {
  background-color: #2b2b2b;
  border-color: #ff5353;
  color: #ff5353;
}

.docs-info-block.danger a {
  color: #a40000;
}

.dark .docs-info-block.danger a {
  color: #ff5353;
}

.docs-info-block.danger blockquote {
  border-left-color: #ff5353;
  color: #a40000;
}

.dark .docs-info-block.danger blockquote {
  border-left-color: #ff5353;
  color: #ff5353;
}

.docs-info-block.danger strong {
  color: #a40000;
}

.dark .docs-info-block.danger strong {
  color: #ff5353;
}

.docs-info-block.danger code {
  color: #a40000;
}

.dark .docs-info-block.danger code {
  color: #ff5353;
  border-color: #ff5353;
  background-color: #2b2b2b;
}

/* 
  InfoBlock - info
*/

.docs-info-block.info {
  background-color: #fafdff;
  border-color: #40a8f5;
  color: #004477;
}

.dark .docs-info-block.info {
  background-color: #2b2b2b;
  border-color: #40a8f5;
  color: #40a8f5;
}

.docs-info-block.info a {
  color: #004477;
}

.dark .docs-info-block.info a {
  color: #40a8f5;
}

.docs-info-block.info blockquote {
  border-left-color: #40a8f5;
  color: #004477;
}

.dark .docs-info-block.info blockquote {
  border-left-color: #40a8f5;
  color: #40a8f5;
}

.docs-info-block.info strong {
  color: #004477;
}

.dark .docs-info-block.info strong {
  color: #40a8f5;
}

.docs-info-block.info code {
  color: #004477;
}

.dark .docs-info-block.info code {
  background-color: #2b2b2b;
  color: #40a8f5;
  border-color: #40a8f5;
}

.docs-info-block-header {
  font-size: 16px;
  font-weight: 500;
}

.ch-codeblock ::selection {
  background-color: rgba(64, 168, 245, 0.5);
}

.ch-codegroup ::selection {
  background-color: rgba(64, 168, 245, 0.5);
}

/* Add custom scrollbar styles */
.dark ::-webkit-scrollbar {
  width: 12px;
}

.dark ::-webkit-scrollbar-track {
  background: var(--scrollbar-track-bg, #949494);
}

.dark ::-webkit-scrollbar-thumb {
  background: var(--scrollbar-thumb-bg, #2b2b2b);
  border-radius: 6px;
  border: 2px #949494 solid;
  background-clip: padding-box;
}

.dark ::-webkit-scrollbar-thumb:hover {
  background: var(--scrollbar-thumb-hover-bg, #5c5c5c);
}

.navbar-dropdown-menu:hover p {
  color: #40a8f5;
}
.navbar-dropdown-menu:hover svg {
  stroke: #40a8f5;
}

.dark .navbar-dropdown-menu:hover p {
  color: #40a8f5;
}
.dark .navbar-dropdown-menu:hover svg {
  stroke: #40a8f5;
}

